# xninetzy

./: .env.example  .gitignore  README.md  REPORT.md  docker-compose.yml  repomix-output.xml
services/ai/: .env.example  Dockerfile  pyproject.toml  repomix-output.xml
services/ai/app/: main.py
services/ai/data/: xninetzy.sqlite3-shm  xninetzy.sqlite3-wal
services/ai/docs/: CODEBASE_GUIDE_AND_FEATURE_PLAYBOOK.md  DEEP_RESEARCH_ADMIN_ONLY.md  DEEP_RESEARCH_SUBPLANNING.md  DEEP_RESEARCH_WORKFLOW.md  FOLDERING_REFACTOR_IT_LEARNING_OS.md  GRAPH_RAG_MVP.md  HEBAT_DEBUG_GUIDE.md  HITL_ADMIN_APPROVAL.md  LEARNING_ROADMAP_WORKFLOW.md  MEDIA_INGESTION.md  RESEARCH_ACTION_REGISTRY.md  RESEARCH_NOTIFICATION_POLICY.md  SKILLS.md  WA_AI_SECOND_BRAIN_AUDIT.md  XNINETZY_AGENT_SYSTEM_VISUAL.md
services/ai/tests/: conftest.py  manual_hebat_e2e.py  test_command_router.py  test_context_routing.py  test_deep_research_permissions.py  test_foldering_refactor.py  test_graph_rag.py  test_hebat_debug.py  test_hebat_download.py  test_hebat_extractors.py  test_hebat_session.py  test_hitl.py  test_it_learning_domain.py  test_learning_roadmap.py  test_lightning.py  test_media_command_router.py  test_media_document_parser.py  test_memory.py  test_memory_lightning_router.py  test_multi_action_routing.py  test_notification_policy.py  test_reminder_content.py  test_reminder_parser.py  test_reminder_scheduler.py  test_reminder_service.py  test_research_command_router.py  test_research_session.py  test_research_subplanner.py  test_research_tools.py  test_rules.py  test_rules_command_router.py  (+9 more)
(+450 files in other folders)
