[project]
name = "xninetzy-ai"
version = "0.1.0"
description = "FastAPI AI service for Xninetzy AI WhatsApp bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "langchain",
    "langchain-openai",
]

[tool.uv]
package = false
