[project]
name = "xninetzy-ai"
version = "0.1.0"
description = "FastAPI AI service for Xninetzy AI WhatsApp bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pypdf>=4.0",
    "numpy>=2.4.6",
    "faiss-cpu>=1.8",
]

[tool.uv]
package = false
